2004-09-15 Scott Dattalo <scott@dattalo.com>
	* src/processor.cc, src/processor.h, src/pic-processor.cc:
	getWriteTT and getReadTT used to return TraceType objects,
	but now they return unsigned ints.

2004-09-15 Scott Dattalo <scott@dattalo.com>
	* src/processor.cc, src/trace.cc, gui/gui_src_opcode.cc:
	- 18f processors' addresses were off by a factor of two in
	disassembly operations.
	
2004-09-14 Borut Razem <borut.razem@siol.net>
	* cli/cli.cvproj, src/src.vcproj, plat/win32/gpsim.def: MSVC sync
	* cli/makefile.mingw, src/makefile.mingw: MinGW sync
	* plat/win32/gpsim.nsi: corrected revision number to 0.22.3

2004-09-14 Scott Dattalo <scott@dattalo.com>
	* regression/p12ce518/p12c518.asm, regression/p12ce518/p12c518.stc,
	regression/p12ce518/EEdriver.asm: Added a regression test
	for the 12ce518.
	* src/stimuli.cc, src/i2c-ee.cc, src/ioports.cc, src/stimuli.h,
	src/14bit-registers.cc:
	Fixed stimuli so that the 12CE518 internal EEPROM would work.
	
2004-09-13 Scott Dattalo <scott@dattalo.com>
	* src/i2c-ee.cc, src/i2c-ee.h, src/ioports.cc, src/p12x.cc,
	src/stimuli.cc, src/stimuli.h: Partially check in for work
	on the 12ce518 bug (internal I/O pins).

2004-09-12 Scott Dattalo <scott@dattalo.com>
	* cli/Makefile.am, cli/errors.cc, cli/errors.h:
	* src/Makefile.am, src/errors.cc, src/errors.h:
	Moved errors.* from cli/ to src/
	* src/expr.cc, src/operator.cc, cli/cmd_disasm.cc,
	cli/cmd_set.cc, cli/cmd_x.cc, cli/command.cc, cli/command.h,
	cli/parse.yy, cli/scan.ll:
	Updated the directory path for including errors.h.

2004-09-12 Borut Razem <borut.razem@siol.net>
	* cli/cli.cvproj, src/src.vcproj, plat/win32/gpsim.def: MSVC sync
	* cli/makefile.mingw, src/makefile.mingw, gpsim/makefile.mignw: MinGW sync

2004-09-11 Scott Dattalo <scott@dattalo.com>
	* configure.in: Bumped the Revision up to 0.22.3 since there
	have been *so* many changes.
	* cli/expr.h, cli/expr.cc, cli/operator.cc, cli/operator.h:
	  - moved to the src/ directory