@@ -1,4 +1,7 @@
 2004-09-15 Scott Dattalo <scott@dattalo.com>
+	* gui/gui_regwin.cc, gui/gui_src_asm.cc: Fixed ranging checks.
+
+2004-09-15 Scott Dattalo <scott@dattalo.com>
 	* src/processor.cc, src/processor.h, src/pic-processor.cc:
 	getWriteTT and getReadTT used to return TraceType objects,
 	but now they return unsigned ints.
